# max31855

./: Cargo.toml  LICENSE  README.md  flake.nix
examples/: temperature.rs
src/: lib.rs
